<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>remote-group</groupId>
    <artifactId>simple-jmx</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>simple-jmx</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <!--<argument>-Xms512m</argument>-->
                        <!--<argument>-Xmx512m</argument>-->
                        <!--<argument>-XX:NewRatio=3</argument>-->
                        <!--<argument>-XX:+PrintGCTimeStamps</argument>-->
                        <!--<argument>-XX:+PrintGCDetails</argument>-->
                        <!--<argument>-Xloggc:gc.log</argument>-->
                        <!--<argument>-classpath</argument>-->
                        <classpath/>
                        <argument>remote.TestServer</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
